# sidury

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  _run_qpc.bat  _run_qpc.sh  sidury.mak  trampoline.cpp
build_ninja/: debug_linux_amd64.ninja  debug_linux_i386.ninja  release_linux_amd64.ninja  release_linux_i386.ninja
scripts/: base.qpcb  client.mak  client.qpc  sidury  sidury.mak  sidury.qpc
sidury/: copy_dlls.bat  imgui.ini  riff
sidury/materials/models/riverhouse/: riverhouse.mtl  riverhouse_source_scale.mtl
sidury/materials/shaders/: 3dshader.frag  3dshader.vert  3dvert.spv
src/: gameloader.c
src/asset_convert_tool/: CMakeLists.txt
src/core/: game_entry.cpp
src/editor/: CMakeLists.txt  editor_view.cpp  editor_view.h  entity.cpp  entity.h  entity_editor.cpp  entity_editor.h  file_picker.cpp  file_picker.h  game_entry.cpp  game_physics.cpp  game_physics.h  game_shared.h  gizmos.cpp  gizmos.h  importer.cpp  importer.h  inputsystem.cpp  inputsystem.h  main.cpp  main.h  mapmanager.cpp  mapmanager.h  skybox.cpp  skybox.h  ui_asset_list.cpp  ui_material_editor.cpp
src/editor/flatbuffers/: compile.cmd  sidury.fbs
src/editor/importers/: importer_jpg.cpp
src/game/: CMakeLists.txt  cl_main.cpp  cl_main.h  engine.cpp  engine.h  ent_light.cpp  ent_light.h  ent_suit.cpp  ent_suit.h  entity.cpp  entity.h  entity_component_pool.cpp  entity_components_base.cpp  entity_serialization.cpp  entity_systems.cpp  game_entry.cpp  game_physics.cpp  game_physics.h  game_rules.cpp  game_rules.h  game_shared.cpp  game_shared.h  game_util.h  gamesystem.cpp  gamesystem.h  inputsystem.cpp  inputsystem.h  main.cpp  main.h  mapmanager.cpp  mapmanager.h  physics.cpp  physics.h  player.cpp  player.h  shimdefs.h  shims.h  shims_shims.cpp  skybox.cpp  skybox.h  (+9 more)
src/game/capnproto/: compile.cmd  sidury.capnp  sidury.capnp.c++  sidury.capnp.h
src/game/client/: CMakeLists.txt  cl_interface.cpp  cl_interface.h  cl_main.cpp  cl_main.h  inputsystem.cpp
src/game/flatbuffers/: sidury.fbs  sidury_generated.h
src/game/graphics/: debug_draw.cpp  graphics.cpp  graphics.h  graphics_draw.cpp  graphics_int.h  lighting.cpp  lighting.h  material.cpp  mesh_builder.cpp  mesh_builder.h  model_gltf.cpp  model_obj.cpp  shader_basic3d.cpp  shader_debug.cpp  shader_deferred.cpp  shader_imgui.cpp  shader_shadowmap.cpp  shader_skinning.cpp  shader_skybox.cpp  shader_system.cpp  shader_unlit.cpp
src/game/graphics/shaders_glsl/: _compile.py  basic3d.frag  basic3d.vert  common_shadow.glsl  core.glsl  debug.vert  debug_col.vert  shadow.frag  shadow.vert  skinning.comp  skybox.frag  unlit.vert
src/game/graphics/shaders_glsl/old/: imgui.vert  unlitarray.frag  unlitarray.vert
src/game/manager/: main.cpp
src/game/network/: net_linux.cpp  net_main.cpp  net_main.h  net_windows.cpp
src/game/server/: CMakeLists.txt  sv_interface.cpp  sv_main.cpp  sv_main.h
src/game/shared/: game_physics.cpp  game_physics.h  game_rules.cpp  game_rules.h  game_shared.cpp  game_shared.h  main.cpp  main.h  mapmanager.cpp  mapmanager.h  player.cpp  player.h  sidury_shared.cmake  skybox.cpp  sound.cpp  sound.h  steam.cpp  steam.h  testing.cpp  testing.h
src/game/shared/entity/: entity.cpp  entity.h  entity_component_pool.cpp  entity_components_base.cpp  entity_serialization.cpp  entity_systems.cpp  entity_systems.h
src/game/shared/flatbuffers/: sidury_generated.h
src/game/shared/network/: net_main.cpp  net_windows.cpp
src/game/terrain/: noise.cpp  noise.h  terrain.cpp  terrain.h
src/game/tools/: entity_editor.cpp  light_editor.cpp  light_editor.h  map_converter.cpp  map_converter.h  map_converter_vmf.cpp  tools.cpp  tools.h
src/graphics/: CMakeLists.txt  debug_draw.cpp  graphics.cpp  graphics_draw.cpp  graphics_int.h  graphics_no.h  igraphics.h  lighting.cpp  material.cpp  mesh_builder.cpp  model_gltf.cpp  model_obj.cpp  render_api_old.cpp  shader_basic3d.cpp  shader_debug.cpp  shader_shadowmap.cpp  shader_skinning.cpp  shader_skybox.cpp  shader_system.cpp  shader_unlit.cpp  shader_water.cpp
src/graphics/shaders/: shader_debug.cpp  shader_gizmo.cpp  shader_select.cpp  shader_shadowmap.cpp
src/graphics/shaders_glsl/: _compile.py  basic3d.frag  basic3d.vert  common_lighting.glsl  core.glsl  debug.vert  debug_col.vert  shadow.frag  shadow.vert  skinning.comp  skybox.vert
src/graphics/shaders_glsl/old/: basic2d.vert  deferred.frag  deferred.vert  deferred_fullscreen.frag  deferred_fullscreen.vert  imgui.frag
src/launcher/: CMakeLists.txt  gameloader.c  gameloader.cpp  launcher_base.cpp  launcher_base.h  launcher_editor.cpp  launcher_sidury.cpp
src/render_test/: CMakeLists.txt
src/shared/: map_system.cpp  map_system.h
src/sidury2/client/: cl_interface.cpp
src/sidury2/manager/: main.cpp
src/sidury2/shared/: main.cpp  main.h
src/steam/: CMakeLists.txt  ch_isteam.h  steam.cpp
src/terrain/: noise.h  terrain.cpp  terrain.h
src/toolkit/: CMakeLists.txt
src/toolkit/main_window/: entry.cpp  main.cpp  main.h  ui_asset_list.cpp  ui_resource_usage.cpp  windows.cpp
src/toolkit/modules/map_editor/: editor_view.cpp  entity.cpp  entity.h  entity_editor.cpp  entity_editor.h  game_physics.cpp  gizmos.cpp  inputsystem.cpp  main.cpp  main.h  mapmanager.cpp  mapmanager.h  skybox.cpp  sound.cpp  undo_system.cpp
src/toolkit/modules/material_editor/: material_editor.cpp  material_editor.h  ui_material_editor.cpp
src/toolkit/shared/: file_picker.cpp  file_picker.h  itool.h
